[package]
name = "securust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.12.1", features = ["image"] }
orion = "0.17.6"
pad = "0.1.6"
tokio = {version = "1.37.0", features = ["full"] }
